[tool.poetry]
name = "zum"
version = "0.3.0"
description = "Stop writing scripts to interact with your APIs. Call them as CLIs instead."
license = "MIT"
authors = ["Daniel Leal <dlleal@uc.cl>"]
maintainers = ["Daniel Leal <dlleal@uc.cl>"]
readme = "README.md"
homepage = "https://zum.daleal.dev/"
repository = "https://github.com/daleal/zum"
documentation = "https://zum.daleal.dev/docs/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "zum" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    ".coveragerc",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.6"
tomlkit = "^0.7.0"
httpx = ">= 0.16.1, ^0.17.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poetry.plugins."console_scripts"]
zum = "zum.cli.core:dispatcher"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/daleal/zum/issues"
